--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "engines": { "node": ">=18" },
   "dependencies": {
     "express": "^4.19.2",
-    "tiktok-live-connector": "1.1.9"
+    "@qixils/tiktok-live-connector": "^2.1.0"
   },
   "scripts": {
     "start": "node server.js"
   }
 }
+
 
 
 
