--- a/package.json
+++ b/package.json
@@ -6,15 +6,9 @@
   "engines": { "node": ">=18" },
   "dependencies": {
     "express": "^4.19.2",
-    "@qixils/tiktok-live-connector": "^2.1.0"
+    "@qixils/tiktok-live-connector": "1.1.6"
   },
   "scripts": {
     "start": "node server.js"
   }
 }
-
-
-
-
-
-
