--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@qixils/tiktok-live-connector": "1.1.6"
   },
   "scripts": {
-    "start": "node server.js"
+    "prestart": "node -e \"try{console.log('[prestart] removing old tiktok-live-connector');require('fs').rmSync('node_modules/tiktok-live-connector',{recursive:true,force:true});}catch(e){console.log('[prestart] skip:',e&&e.message)}\""
+	"start": "node server.js"
   }
 }
