--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "engines": { "node": ">=18" },
   "dependencies": {
     "express": "^4.19.2",
-    "@qixils/tiktok-live-connector": "1.1.6"
+    "tiktok-live-connector": "^1.2.3"
   },
   "scripts": {
     "prestart": "node -e \"try{console.log('[prestart] removing old tiktok-live-connector');require('fs').rmSync('node_modules/tiktok-live-connector',{recursive:true,force:true});}catch(e){console.log('[prestart] skip:',e&&e.message)}\"",
